# nexus

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_READINESS_REPORT.md  EXAMPLE_IMPLEMENTATION.py  IMPLEMENTATION_ROADMAP.md  NEXUS_FRONTEND_MVP.md  PROJECT_VISION.md  README.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_REQUIREMENTS.md  docker-compose.yml  package-lock.json  package.json  quick_demo.py  run_tests.py  test_company_intelligence.py  test_ollama.py  test_user_journey.py
backend/: .env.example  .env.sample  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  failure_logger.py  main.py  orchestrator.py
backend/app/agents/: carbon_expert.py  company_intelligence.py  company_intelligence_real.py  entity_intel.py  nature_expert.py  org_boundary.py  pcf_expert.py  report_generator.py  smart_document.py
backend/app/intelligence/: __init__.py  research_engine.py  web_scraper.py
backend/app/learning/: __init__.py  engine.py
backend/app/llm/: __init__.py  client.py  gateway.py
backend/app/processing/: __init__.py  document_processor.py
backend/data/failures/: failures.jsonl
backend/tests/: test_failure_logging.py  test_llm_system.py  test_org_boundary_simple.py  test_org_boundary_xlsx.py  test_web_intelligence.py
backend/tests/carbon-accounting/: test_org_boundary_regional.py
backend/tests/carbon-accounting/org-boundary/: org_structure_AMER.xlsx  org_structure_APAC.xlsx  org_structure_EMEA.xlsx  org_structure_LATAM.xlsx
context/: ARCHITECTURE.md  REQUIREMENTS.md  STRATEGY.md  VISION.md  scratchpad.md
docs/: package-lock.json  (+3 more)
(+86 files in other folders)
