[tool.poetry]
name = "nexus-backend"
version = "0.1.0"
description = "Nexus FastAPI backend with multi-agent orchestrator"
authors = ["Nexus Team <dev@nexus.ai>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.1"
python-multipart = "^0.0.9"
pandas = "^2.2.2"
openpyxl = "^3.1.3"
redis = "^5.0.4"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
